--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,17 +1,21 @@
 {
   "schemaVersion": "1.0.0",
-  "projectStateVersion": 7,
+  "projectStateVersion": 15,
   "summary": "Single-page web app rebranded to \"RAJESH KURKURE GARHWA\" featuring customer/admin login, product browsing, admin product management, and basic ordering with product data stored in browser localStorage.",
   "architectural_notes": [
     "Front-end only single HTML file with embedded CSS and vanilla JS.",
     "Uses browser localStorage key \"products\" to persist product list.",
-    "Hardcoded admin credentials: username \"admin\", password \"admin123\"."
+    "Hardcoded admin credentials: username \"admin\", password \"admin123\".",
+    "Add order persistence in browser localStorage (e.g., key \"orders\") and an admin-only UI section to list saved orders.",
+    "Extend order data model to include customer identifier/name so admin can view order history per customer.",
+    "Track per-product sales counts (derived from saved orders or stored separately) to enable 'most selling' product sorting.",
+    "Provide an admin-only control to clear orders in localStorage (and any derived sales stats if stored)."
   ],
   "known_issues": [
-    "Displayed application logo does not match the originally uploaded/provided logo image (branding regression)."
+    "Displayed application logo does not match the originally uploaded/provided logo image (branding regression).",
+    "Current in-app 'How to Add Products' guidance appears to be confusing customers and leading them to try admin login; needs removal, rewording, or admin-only visibility."
   ],
-  "isFixRequest": true,
-  "imageRequirements": "## Edit Images\n- Replace the logo artwork so it matches the originally uploaded/provided logo (rajesh-kurkure-garhwa-logo.dim_256x256.png > rajesh-kurkure-garhwa-logo-corrected.dim_256x256.png)",
+  "isFixRequest": false,
   "existing_features": [
     {
       "id": "feature-create-a-single-page-react-ui-for-sudarajee-school-kurreganwa-with-three-states-1-login-screen-shown-by-default-2-shop-screen-product-list-and-3-admin-panel-only-visible-for-admin-users-all-user-facing-text-must-be-in-english",
@@ -100,6 +104,62 @@
         "REQ-11"
       ],
       "version": 1
+    },
+    {
+      "id": "feature-use-the-newly-uploaded-image-screenshot-20260102-085726-whatsapp-2-jpg-as-the-application-logo-by-creating-a-production-ready-static-logo-asset-in-frontend-public-assets-generated-and-updating-the-header-to-display-that-new-asset",
+      "title": "Use the newly uploaded image (Screenshot_20260102_085726_WhatsApp-2.jpg) as the application logo by creating a production-ready static logo asset in frontend/public/assets/generated and updating the header to display that new asset.",
+      "reqIds": [
+        "REQ-12"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-clear-english-in-app-guidance-explaining-how-to-add-products-including-that-only-admin-users-can-add-products-and-the-exact-steps-required-log-in-as-admin-open-the-admin-panel-enter-product-name-and-price-and-submit-the-guidance-must-be-visible-to-a-user-who-is-confused-about-adding-products-e-g-on-the-login-screen-and-or-near-the-shop-admin-area-and-must-not-rely-on-external-documentation",
+      "title": "Add clear, English in-app guidance explaining how to add products, including that only admin users can add products and the exact steps required (log in as admin, open the admin panel, enter product name and price, and submit). The guidance must be visible to a user who is confused about adding products (e.g., on the login screen and/or near the shop/admin area) and must not rely on external documentation.",
+      "reqIds": [
+        "REQ-13"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-persist-customer-orders-in-browser-localstorage-and-show-an-admin-only-orders-list-so-the-admin-can-view-received-orders",
+      "title": "Persist customer orders in browser localStorage and show an admin-only Orders list so the admin can view received orders.",
+      "reqIds": [
+        "REQ-14"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-remove-or-restrict-the-visible-how-to-add-products-step-by-step-guide-so-customers-are-not-encouraged-to-log-in-as-admin-customers-must-not-see-admin-credentials-or-instructions-to-use-admin-login",
+      "title": "Remove or restrict the visible \"How to Add Products\" step-by-step guide so customers are not encouraged to log in as admin; customers must not see admin credentials or instructions to use admin login.",
+      "reqIds": [
+        "REQ-15"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-capture-and-persist-the-customer-name-for-each-placed-order-so-the-admin-can-see-order-history-separated-by-customer",
+      "title": "Capture and persist the customer name for each placed order, so the admin can see order history separated by customer.",
+      "reqIds": [
+        "REQ-16"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-an-admin-only-action-to-clear-delete-the-entire-stored-order-history-localstorage-orders-with-in-app-confirmation-and-feedback-no-browser-alert",
+      "title": "Add an admin-only action to clear/delete the entire stored order history (localStorage orders) with in-app confirmation and feedback (no browser alert).",
+      "reqIds": [
+        "REQ-17"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-on-the-customer-product-page-list-sort-products-by-most-selling-highest-number-of-orders-using-the-stored-order-history-as-the-source-of-sales-counts",
+      "title": "On the customer product page, list/sort products by \"most selling\" (highest number of orders) using the stored order history as the source of sales counts.",
+      "reqIds": [
+        "REQ-18"
+      ],
+      "version": 1
     }
   ],
   "new_feature_requests": [
@@ -130,6 +190,36 @@
     {
       "id": "AR-5",
       "summary": "Rebrand UI/app name to \"RAJESH KURKURE GARHWA\" while keeping the same logo image",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-6",
+      "summary": "Add order tracking: save each placed order to browser localStorage and show an admin-only Order List/Orders section to view received orders",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-7",
+      "summary": "Remove or restrict the visible 'How to Add Products' step-by-step guide so customers are not encouraged to log in as admin (make admin guidance admin-only or reword it)",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-8",
+      "summary": "Store order history with customer names (separate per customer) in the admin Orders view",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-9",
+      "summary": "Add an admin action to clear/delete order history (orders stored in localStorage)",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-10",
+      "summary": "On the customer product page, sort/list products by most-selling (based on order counts)",
       "reqIds": [],
       "status": "pending"
     }
