--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,16 +1,36 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "New project",
-  "architectural_notes": [],
-  "known_issues": [],
-  "isFixRequest": false,
+  "summary": "Backend needs to implement persistent product storage (currently empty Motoko actor) so products save permanently across upgrades; rebuild/redeploy requested.",
+  "architectural_notes": [
+    "Backend currently has no implementation (`backend/main.mo` is `actor {}`); must add stable persistent storage (stable vars) and product CRUD/read methods to support permanent saving across upgrades."
+  ],
+  "known_issues": [
+    "Products are not saved permanently because backend has no storage/code (empty Motoko actor)."
+  ],
+  "isFixRequest": true,
   "existing_features": [
     {
-      "id": "feature-add-the-mobile-number-9973279335-at-the-bottom-of-the-app-by-displaying-it-in-the-global-footer-below-the-main-content-in-english",
-      "title": "Add the mobile number \"9973279335\" at the bottom of the app by displaying it in the global footer (below the main content) in English.",
+      "id": "feature-update-the-frontend-product-data-flow-to-use-the-backend-product-apis-instead-of-localstorage-replace-the-current-useproducts-hook-behavior-which-reads-writes-localstorage-with-backend-backed-fetching-and-mutations-using-react-query-so-product-changes-are-shared-across-devices-browsers-and-persist-permanently",
+      "title": "Update the frontend product data flow to use the backend product APIs instead of `localStorage`. Replace the current `useProducts` hook behavior (which reads/writes `localStorage`) with backend-backed fetching and mutations (using React Query) so product changes are shared across devices/browsers and persist permanently.",
       "reqIds": [
-        "REQ-2"
+        "REQ-5"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-wire-the-existing-ui-components-to-the-backend-backed-products-hook-so-existing-admin-shop-behaviors-remain-the-same-app-tsx-continues-to-pass-products-addproduct-updateproduct-deleteproduct-to-shopview-and-adminpanel-but-these-operations-now-call-the-backend-and-keep-ui-state-in-sync-including-loading-error-handling-with-user-friendly-english-messages",
+      "title": "Wire the existing UI components to the backend-backed products hook so existing admin/shop behaviors remain the same: `App.tsx` continues to pass `products`, `addProduct`, `updateProduct`, `deleteProduct` to `ShopView` and `AdminPanel`, but these operations now call the backend and keep UI state in sync (including loading/error handling with user-friendly English messages).",
+      "reqIds": [
+        "REQ-6"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-verify-build-deploy-succeeds-after-these-changes-and-the-app-retains-the-existing-global-footer-content-including-the-english-text-mobile-9973279335-in-the-footer",
+      "title": "Verify build/deploy succeeds after these changes and the app retains the existing global footer content, including the English text \"Mobile: 9973279335\" in the footer.",
+      "reqIds": [
+        "REQ-7"
       ],
       "version": 1
     }
@@ -18,12 +38,28 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Add mobile number (9973279335) at the bottom of the app/page",
+      "summary": "Implement Motoko backend persistent product storage using stable variables, including product CRUD and read APIs so products are saved permanently across upgrades.",
       "reqIds": [],
+      "status": "in_progress"
+    },
+    {
+      "id": "AR-2",
+      "summary": "Implement persistent product storage in `backend/main.mo` using stable state so products are saved permanently across canister upgrades (the current actor is empty). Add a Product data model compatible with the frontend (`id`, `name`, `price`, optional `image` as text) and store the full product list in stable storage.",
+      "reqIds": [
+        "REQ-3"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-3",
+      "summary": "Expose backend CRUD + read APIs for products from `backend/main.mo`: list/get all products (query), create product (update), update product by id (update), delete product by id (update). Ensure IDs are unique and stable for each created product.",
+      "reqIds": [
+        "REQ-4"
+      ],
       "status": "pending"
     }
   ],
-  "projectName": "Add mobile number in the app footer",
+  "projectName": "Persist products permanently with Motoko backend storage and CRUD API",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
