--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,65 +1,57 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Backend needs to implement persistent product storage (currently empty Motoko actor) so products save permanently across upgrades; rebuild/redeploy requested.",
-  "architectural_notes": [
-    "Backend currently has no implementation (`backend/main.mo` is `actor {}`); must add stable persistent storage (stable vars) and product CRUD/read methods to support permanent saving across upgrades."
-  ],
+  "summary": "New project",
+  "architectural_notes": [],
   "known_issues": [
-    "Products are not saved permanently because backend has no storage/code (empty Motoko actor)."
+    "Deployment failed during build/deploy pipeline (needs investigation and fix)."
   ],
   "isFixRequest": true,
   "existing_features": [
     {
-      "id": "feature-update-the-frontend-product-data-flow-to-use-the-backend-product-apis-instead-of-localstorage-replace-the-current-useproducts-hook-behavior-which-reads-writes-localstorage-with-backend-backed-fetching-and-mutations-using-react-query-so-product-changes-are-shared-across-devices-browsers-and-persist-permanently",
-      "title": "Update the frontend product data flow to use the backend product APIs instead of `localStorage`. Replace the current `useProducts` hook behavior (which reads/writes `localStorage`) with backend-backed fetching and mutations (using React Query) so product changes are shared across devices/browsers and persist permanently.",
+      "id": "feature-investigate-and-fix-the-root-cause-of-the-build-deploy-pipeline-failure-so-the-project-compiles-and-deploys-successfully",
+      "title": "Investigate and fix the root cause of the build/deploy pipeline failure so the project compiles and deploys successfully.",
+      "reqIds": [
+        "REQ-1"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-keep-all-existing-user-facing-text-in-english-and-ensure-the-existing-global-footer-content-remains-unchanged-including-the-text-mobile-9973279335",
+      "title": "Keep all existing user-facing text in English and ensure the existing global footer content remains unchanged, including the text \"Mobile: 9973279335\".",
       "reqIds": [
         "REQ-5"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-wire-the-existing-ui-components-to-the-backend-backed-products-hook-so-existing-admin-shop-behaviors-remain-the-same-app-tsx-continues-to-pass-products-addproduct-updateproduct-deleteproduct-to-shopview-and-adminpanel-but-these-operations-now-call-the-backend-and-keep-ui-state-in-sync-including-loading-error-handling-with-user-friendly-english-messages",
-      "title": "Wire the existing UI components to the backend-backed products hook so existing admin/shop behaviors remain the same: `App.tsx` continues to pass `products`, `addProduct`, `updateProduct`, `deleteProduct` to `ShopView` and `AdminPanel`, but these operations now call the backend and keep UI state in sync (including loading/error handling with user-friendly English messages).",
-      "reqIds": [
-        "REQ-6"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-verify-build-deploy-succeeds-after-these-changes-and-the-app-retains-the-existing-global-footer-content-including-the-english-text-mobile-9973279335-in-the-footer",
-      "title": "Verify build/deploy succeeds after these changes and the app retains the existing global footer content, including the English text \"Mobile: 9973279335\" in the footer.",
-      "reqIds": [
-        "REQ-7"
       ],
       "version": 1
     }
   ],
   "new_feature_requests": [
     {
-      "id": "AR-1",
-      "summary": "Implement Motoko backend persistent product storage using stable variables, including product CRUD and read APIs so products are saved permanently across upgrades.",
-      "reqIds": [],
-      "status": "in_progress"
+      "id": "AR-2",
+      "summary": "Make `backend/main.mo` compile reliably on the Internet Computer toolchain by replacing the current `mo:core/Map` usage and any non-compiling Map operations with a supported, correct data structure and APIs (while preserving the existing product CRUD interface semantics).",
+      "reqIds": [
+        "REQ-2"
+      ],
+      "status": "pending"
     },
     {
-      "id": "AR-2",
-      "summary": "Implement persistent product storage in `backend/main.mo` using stable state so products are saved permanently across canister upgrades (the current actor is empty). Add a Product data model compatible with the frontend (`id`, `name`, `price`, optional `image` as text) and store the full product list in stable storage.",
+      "id": "AR-3",
+      "summary": "Implement stable, upgrade-safe persistence for products and `nextId` in the single Motoko actor so product data is retained across canister upgrades/redeploys.",
       "reqIds": [
         "REQ-3"
       ],
       "status": "pending"
     },
     {
-      "id": "AR-3",
-      "summary": "Expose backend CRUD + read APIs for products from `backend/main.mo`: list/get all products (query), create product (update), update product by id (update), delete product by id (update). Ensure IDs are unique and stable for each created product.",
+      "id": "AR-4",
+      "summary": "Ensure the backend upgrade/migration setup is consistent with the project’s migration policy (conditional) by providing/repairing `backend/migration.mo` (and any required wiring) so state initialization/upgrade does not break deployment.",
       "reqIds": [
         "REQ-4"
       ],
       "status": "pending"
     }
   ],
-  "projectName": "Persist products permanently with Motoko backend storage and CRUD API",
+  "projectName": "Fix deployment failure by correcting Motoko backend persistence and migration wiring",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
