Finalize generated app scaffold and prompt user to verify
# Motivation
Completed the automated build and app creation process: code and documentation were generated and the app spec was recorded. The user was asked to verify that a newly added product loads correctly, and offered help to refine product ID handling next. This commit captures that completion step and encourages verification before further refinements.

# Changes
No changes planned (per spec.md).

Co-authored-by: Caffeine <forge@caffeine.ai>

--- a/src/project_state.json
+++ b/src/project_state.json
@@ -2,39 +2,33 @@
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
   "summary": "New project",
-  "architectural_notes": [],
+  "architectural_notes": [
+    "Product IDs must use a single consistent type across frontend/backend (string vs number vs BigInt) to avoid fetch/update mismatches."
+  ],
   "known_issues": [
-    "Reported regression/bug: saving a product still does not work (price behavior/data save still incorrect) after Version 16 release."
+    "After adding any product, the UI shows 'unable to load the product' due to product ID type mismatch between addProduct response (number) and frontend expectations (string/BigInt conversions)."
   ],
   "isFixRequest": true,
   "existing_features": [
     {
-      "id": "feature-fix-the-product-price-mapping-so-that-prices-are-stored-in-the-backend-as-integer-paise-cents-but-displayed-and-edited-in-the-ui-as-rupees-with-2-decimal-places-ensuring-a-product-saved-from-adminpanel-shows-the-same-price-when-reloaded",
-      "title": "Fix the product price mapping so that prices are stored in the backend as integer paise (cents) but displayed and edited in the UI as rupees with 2 decimal places, ensuring a product saved from AdminPanel shows the same price when reloaded.",
+      "id": "feature-fix-the-product-id-type-mismatch-that-causes-the-ui-to-show-an-error-e-g-unable-to-load-the-product-after-adding-any-product-by-normalizing-backend-product-ids-and-pricepaise-values-to-the-ui-s-expected-types-ui-product-id-must-always-be-a-string-even-when-the-agent-runtime-provides-nat-values-as-javascript-numbers-instead-of-bigint",
+      "title": "Fix the product ID type mismatch that causes the UI to show an error (e.g., \"unable to load the product\") after adding any product by normalizing backend product IDs and pricePaise values to the UI’s expected types (UI Product.id must always be a string), even when the agent/runtime provides Nat values as JavaScript numbers instead of bigint.",
       "reqIds": [
         "REQ-1"
       ],
       "version": 1
     },
     {
-      "id": "feature-fix-the-frontend-update-product-data-conversion-to-avoid-passing-an-object-that-includes-an-id-field-into-uitobackendproductdata-which-expects-omit-product-id-and-ensure-add-update-delete-product-mutations-reliably-call-the-backend-with-correctly-typed-arguments",
-      "title": "Fix the frontend update-product data conversion to avoid passing an object that includes an `id` field into `uiToBackendProductData` (which expects `Omit<Product, 'id'>`), and ensure add/update/delete product mutations reliably call the backend with correctly typed arguments.",
+      "id": "feature-update-the-products-crud-hook-to-ensure-all-backend-calls-receive-correctly-typed-arguments-derived-from-ui-state-convert-ui-string-ids-to-nat-bigint-safely-for-update-delete-operations-and-ensure-update-product-data-conversion-does-not-pass-an-object-containing-an-id-field-into-the-ui-backend-mapping-helper",
+      "title": "Update the products CRUD hook to ensure all backend calls receive correctly typed arguments derived from UI state: convert UI string IDs to Nat/bigint safely for update/delete operations, and ensure update-product data conversion does not pass an object containing an id field into the UI→backend mapping helper.",
       "reqIds": [
         "REQ-2"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-improve-error-visibility-for-failed-product-save-update-delete-operations-by-surfacing-the-underlying-error-message-when-available-in-the-ui-toast-and-console-so-failures-are-diagnosable-without-guessing",
-      "title": "Improve error visibility for failed product save/update/delete operations by surfacing the underlying error message (when available) in the UI toast and console, so failures are diagnosable without guessing.",
-      "reqIds": [
-        "REQ-3"
       ],
       "version": 1
     }
   ],
   "new_feature_requests": [],
-  "projectName": "Fix product saving and price formatting regression",
+  "projectName": "Fix product load failure after adding products (ID type mismatch)",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
